update query-editor --streaming
